fix report z-index for firefox

--- a/why microstrategy/why-mstr.less
+++ b/why microstrategy/why-mstr.less
@@ -257,7 +257,8 @@ section {overflow:hidden;}
 
     //OFF-PAGE IMAGES FOR KEY BENEFITS SECTIONS
     .cutoff-img {max-width:none; z-index:1;}
-    .benefits-section [class*="col-"] {z-index:2;}
+    .benefits-section [class*="text-col"] {z-index:2;}
+    .benefits-section .report-col {z-index:1;}
     .benefits-section {border-bottom:none;}
     #low-cost .cutoff-img {.translateX(-35%);}
     #ease-of-use .cutoff-img {position:absolute; max-width:100%; top:~"calc(50% + 40px)"; left:50%; .translate(-50%, -50%); opacity:0.90; .transition();}
